--- a/src/pages/fact/fact.scss
+++ b/src/pages/fact/fact.scss
@@ -1,3 +1,10 @@
 page-fact {
-
+    .desc{
+        padding:16px;
+        margin:0px;
+        padding-bottom: 0px;
+        color: #6d6c6c;
+        font-size: 16px;
+        font-weight: 100;
+    }
 }
