--- a/src/pages/indicator/indicator.scss
+++ b/src/pages/indicator/indicator.scss
@@ -3,7 +3,7 @@ page-indicator {
         padding:16px;
         margin:0px;
         padding-bottom: 0px;
-        color: #6d6c6c;
+        color: #302f2f;
         font-size: 16px;
         font-weight: 100;
     }
