--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -91,6 +91,6 @@ $colors: (
   color: white;
 }
 
-.toolbar-background-ios {
-  background: transparent !important;
-}
+// .toolbar-background-ios {
+//   background: transparent !important;
+// }
