--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -33,4 +33,7 @@ page-list {
         margin-left: 8px;
         overflow: hidden;
     }  
+    .toolbar-background {
+        background-color: blue;
+      }
 }
