--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -3,6 +3,9 @@ page-detail {
         border-color: none;
         background: transparent;
     }
+    .search-icon{
+        height: 34px;
+    }
     .judul{
         color:white;
         font-size: 20px;
